--- a/honeyqa/app/src/main/res/values/strings.xml
+++ b/honeyqa/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">library</string>
+    <string name="app_name">Honeyqa Example</string>
+    <string name="hq">honeyqa</string>
 </resources>
